--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -75,76 +75,75 @@ library(seriation)
 ### A taxonomy of tumors based on disrupted molecular pathways
  
 To study cancer pathways we obtained a set of 7,607 solid tumor samples from The
-Cancer Genome Atlas (TCGA) through the [Genomic Data Commons (GDC)](gdc.cancer.gov)
-portal. TCGA data because were
-most appropriate for our study given the relative completeness of the patient
-metadata, particularly for survival and staging. We chose to start with somatic
-mutations in exome sequencing data because the affected target gene is known 
-unambiguously. Therefore, we focused on all missense, nonsense, frameshift, and
-splicing mutations. In order to minimize bias from well-studied diseases and
-processes, we selected 377 Reactome pathways
-[reactome.org](https://reactome.org/) of interest corresponding to basic
-cellular processes and biochemical pathways, excluding gene sets that correspond
-to miscellaneous categories ( _e.g._ “transcription factors”) or disease
-associations ( _e.g._ “mutated in colon cancer”) and filtered our gene list on
-membership in these pathways (<mark>total of x genes;</mark> see methods for
-details).
+Cancer Genome Atlas (TCGA) through the [Genomic Data Commons
+(GDC)](gdc.cancer.gov) portal. TCGA data because were most appropriate for our
+study given the relative completeness of the patient metadata, particularly for
+survival and staging. We chose to start with somatic mutations in exome
+sequencing data because the affected target gene is known unambiguously.
+Therefore, we focused on all missense, nonsense, frameshift, and splicing
+mutations. In order to minimize bias from well-studied diseases and processes,
+we selected 377 Reactome pathways [reactome.org](https://reactome.org/) of
+interest corresponding to basic cellular processes and biochemical pathways,
+excluding gene sets that correspond to miscellaneous categories ( _e.g._
+“transcription factors”) or disease associations ( _e.g._ “mutated in colon
+cancer”) and filtered our gene list on membership in these pathways (<mark>total
+of x genes;</mark> see methods for details).
 
 It does not matter for our purposes whether a single tumor is “enriched” for
-multiple pathway mutations, chiefly because such metrics favor larger pathways (
-_i.e._ pathways with more member genes) over smaller ones, and non-expressed
-genes over expressed ones due to transcription coupled repair
+mutations of individual pathways, chiefly because such metrics favor larger
+pathways ( _i.e._ pathways with more member genes) over smaller ones. Data
+binarized by pathway are likely to be noisy for several reasons. First, point
+mutations can be deleterious (attenuating or hypomorphic) or activating
+(neomorphic) in genes that act functionally as either activators or repressors.
+Within the scope of this study we accept this uncertainty and assume mutations
+are generically disruptive to the pathway regardless of whether they are
+activating or deactivating or whether they affect a gene that we might classify
+as one thing or another ( _e.g._ "Tumor suppressor" or "Oncogene"). Second, we
+know that low-expressed genes and non-expressed genes are known to accumulate
+mutations at a higher rate due to transcription coupled repair
 [@kandothMutationalLandscapeSignificance2013; @kimPancancerAnalysisSomatic2018;
-@Pervasive_lesion_segregation; @expression-aware-annotation]. Data selected in
-this manner are likely to be noisy for several reasons. First, point mutations
-can be deleterious (attenuating or hypomorphic) or activating (neomorphic) in
-genes that act functionally as either activators or repressors. Within the scope
-of this study we must accept this uncertainty and assume mutations are
-generically disruptive to the cell regardless of whether they are activating or
-deactivating or whether they affect a gene that we might classify as one thing
-or another ( _e.g._ "Tumor suppressor" or "Oncogene"). Second, as previously
-noted, we know that low-expressed genes and non-expressed genes are known to
-accumulate mutations at a higher rate due to transcription coupled repair. To
-address this issue, we identified genes with low expression in each type of
-cancer and eliminated them for that cancer type only (see methods for details).
-<strike>Highly expressed genes also may have high mutation rates owing to
+@Pervasive_lesion_segregation; @expression-aware-annotation]. To address this
+issue, we identified genes with low expression in each type of cancer and
+eliminated them for that cancer type only (see methods for details).
+<strike>Highly expressed genes could also have high mutation rates owing to
 transcription induced mutagenesis [@parkGenomicEvidenceElevated2012]. We felt
 that this mechanism results in cell-type-specific biases that might be
 biologically meaningful for predisposition to different classes of cancer
-however, and therefore chose to include these genes in our analysis.</strike>
-After selecting our pathways and genes, we then compiled a matrix of the
-pathways, assigning a Boolean value (a 1 or 0, indicating whether any pathway
-member gene carries a mutation) to the pathway regardless of the number of genes
-carrying mutations (this data is visualized in **figure 1a**).
+however, and therefore chose not to exclude these genes from our analysis. After
+selecting our pathways and genes, we then compiled a matrix of the pathways,
+assigning a Boolean value (a 1 or 0, indicating whether any pathway member gene
+carries a mutation) to the pathway regardless of the number of genes carrying
+mutations (**figure 1A**).
 
 ```{r child='../code/figure1.Rmd'}
 ```
 In order to classify tumors using this dataset, we used multiple correspondence
 analysis (MCA) [@JSSv025i01]. First we determined the number of dimensions
-containing useful information (**figure 1b**). Then we performed a UMAP
+containing useful information (**figures 1B, C**). Then we performed a UMAP
 analysis, both in order to summarize the MCA graphically, and as a preprocessing
 step to boost the performance of density based clustering. The resulting map was
 notable for its lobed structure, with several large, robust projections
 reproducible regardless of random seed setting. A representative version of this
-UMAP is shown in **figure 1c** as a 2D projection. Following this spatial
-mapping we attempted to define groupings of similar tumors within the spatial
-map using HDBSCAN, which performs hierarchical clustering and provides metrics
-of cluster stability and probabilities of cluster membership for each node.
-However, HDBSCAN is sensitive to several parameters; key for our analysis are
-the minimum number of tumor samples in a cluster that capture the maximum number
-of tumor samples, measured by probability of membership of $\geq 5\%$ in at
-least one class. Thus, we created a score metric as the fraction of classified
-tumors with max probability $< 5\%$ in one class and chose a cluster size of 95
-to minimize the score function (**figure 1d**). HDBSCAN with these settings
-resulted in 12 distinct high-density clusters which we then projected onto the
-UMAP (**figure 1e**). This classified <mark>x out of 7,607 tumors</mark> but
-still resulted in a significant fraction of unclassified tumor samples. Since we
-ultimately wish to be able to classify any tumor using this scheme, we performed
-k Nearest Neighbors (kNN) analysis, which computes a similarity metric to every
-tumor in the set and then lets the $k$ most similar tumors "vote" as to the
-identity of the query tumor sample based on their classification labels. We set
-$k$ to be the square root of the number of tumor samples (87). Using this
-method, we assigned cluster membership to the remaining tumors (**figure 1f**).
+3D UMAP is shown in **figure 1D** as a 2D projection, rotated to enhance the
+visibility of the major features. Following this spatial mapping we attempted to
+define groupings of similar tumors within the spatial map using HDBSCAN, which
+performs hierarchical clustering and provides metrics of cluster stability and
+probabilities of cluster membership for each node. However, HDBSCAN is sensitive
+to several parameters; key for our analysis are the minimum number of tumor
+samples in a cluster that capture the maximum number of tumor samples, measured
+by probability of membership of $\geq 5\%$ in at least one class. Thus, we
+created a score metric as the fraction of classified tumors with max probability
+$< 5\%$ in one class and chose a cluster size of 95 to minimize the score
+function (**figure 1E**). HDBSCAN with these settings resulted in 12 distinct
+high-density clusters which we then projected onto the UMAP (**figure 1F**).
+This classified <mark>x out of 7,607 tumors</mark> but still resulted in a
+significant fraction of unclassified tumor samples. Since we ultimately wish to
+be able to classify any tumor using this scheme, we performed k Nearest
+Neighbors (kNN) analysis, which computes a similarity metric to every tumor in
+the set and then lets the $k$ most similar tumors "vote" as to the identity of
+the query tumor sample based on their classification labels. We set $k$ to be
+the square root of the number of tumor samples (87). Using this method, we
+assigned cluster membership to the remaining tumors (**figure 1G**).
 
 #### Independence from tissue-of-origin.
 
@@ -152,14 +151,14 @@ Having defined tumors in terms of their pathway disruption profile, we sought to
 understand whether different cancer types segregated into one or more
 predominant classes. To our surprise, most cancer types (with some notable
 exceptions) were not heavily biased in one class, and all well-represented
-cancer types had representative tumors in every class (for example **figure 1h**
+cancer types had representative tumors in every class (for example **figure 1I**
 and full tumor profiles in **supplementary figure S1**, see also interactive
 media from **supplementary file 1 (html)**), suggesting that, in principle at
 least, our novel pathway-disruption classification method identifies molecular
 pathologies largely independent of tissue-of-origin considerations. As an
 example of one type of cancer that does have a biased pathway profile,
-pancreatic adenocarcinoma (PAAD) was biased in class 9 & 10, which is
-distinguished  by KRAS mutations among others. But even PAAD comprises tumors
+pancreatic adenocarcinoma (PAAD) was biased in class 8 & 9, which is
+distinguished  by KRAS mutations among others (**supplementary figure S3**). But even PAAD comprises tumors
 from <mark>check; 7 out of 10 of the remaining classes</mark>, meaning that
 patients hosting these tumors have potentially different underlying molecular
 pathologies.
@@ -179,7 +178,7 @@ cancer subtypes, composed of Triple-negative/Basal-like, Her2 positive,
 normal-like, and lumenal A and B subtypes onto the UMAP. These are among the
 most heavily studied molecular subtypes in cancer, which each have different
 prognoses and standards of care. We did not observe any exclusive segregation by
-pathway for these subtype annotations in GDC (**Figure 1i** and **supplemental
+pathway for these subtype annotations (**Figure 1J** and **supplemental
 file 1**). We also projected histological subtype data for the remaining cancers
 (see **supplementary figure S2** for the full set of projections); we find that
 the subtypes, though often biased towards one or more classes, are almost never
@@ -200,10 +199,10 @@ treatment outcomes. However, the functions of these genes are related to risk
 factors such as genome stability, proof-reading and DNA damage repair, and
 telomere length. _BRCA1/2_ genes for example are key for DNA double-stranded
 break repair [@moynihan-1999-brca1;@davies-2001-brca2] and confer risk for
-breast, prostate and ovarian cancers (refs). The mechanism of risk is thought to
+breast, prostate and ovarian cancers. The mechanism of risk is thought to
 involve loss of heterozygosity [@brca-loh], so we projected the somatic
 mutations for _BRCA1_ and _-2_ genes onto the UMAP, but did not observe
-segregation of these mutations into specific clusters (**figure 1j**). We made
+segregation of these mutations into specific clusters (**figure 1K**). We made
 similar projections for the mismatch repair (MMR) genes _MSH2_, _MSH6_, _MLH_,
 _PMS1_ and _PMS2_; _BRIP1_, _RAD15_, _CHEK2_ and _APC_. None of these genes
 except for _APC_ exhibited any remarkable specificity with respect to cluster
@@ -219,113 +218,104 @@ which can vary greatly in importance between different tissues. Stage is used
 clinically as a proxy for advancement toward a more deadly state and metastasis.
 Given these assumptions, it is possible that more advanced tumors have common
 pathway disruption profiles, and the UMAP which features a series of lobe-like
-structures on a common backbone of tumor samples (**figure 1c**) could in
+structures on a common backbone of tumor samples (**figure 1D**) could in
 principle also reflect progression through a series of stages. In support of
-this hypothesis, the backbone culminates in a group of tumors (class 8) which
-has nearly every pathway disrupted. However, outside of class 8 we don't observe
-an obvious trend in the mutation count across the backbone of the UMAP (**figure
-1g**). Nonetheless, to test the hypothesis that the molecular-pathway disruption
-classes represent advancement through stages, we projected these data onto the
+this hypothesis, the backbone starts with a cluster of tumors (class 1) that has the fewest point mutations and culminates in a cluster (class 10) which
+has nearly every pathway disrupted (**figure 1H**). However, outside of class 10 we don't observe
+an obvious trend in the overall mutation burden across the backbone of the UMAP (**figure
+1H**). Nonetheless, to test the hypothesis that the molecular-pathway disruption
+classes represent advancement through stages, we projected staging data onto the
 UMAP. Similar to tissue of origin and other categories of tumor, we did not
 observe any bias amongst the stages into specific pathway disruption classes
-(**figure 1k**), suggesting that stage is not an determining factor in pathway
+(**figure 1L**), suggesting that stage is not an determining factor in pathway
 disruption classes.
 
 Finally, as a measure of tumor advancement, metastasis is the condition in which
 certain phenotypic criteria are met. These phenotypes include (among others)
 loss of differentiation, cell-cell contacts, epithelial to mesenchyme
-transition, immune system evasion and tissue invasiveness. To determine whether
+transition, immune system evasion and tissue invasiveness [@hallmarks_II]. To determine whether
 any of our classes correspond to an especially advanced stage of cancer accross
-tissue types, we projected the metastasis data onto our UMAP, and surprisingly,
-again, we observed an even distribution across classes (**figure 1l**). This
+tissue types, we projected the metastasis data onto our UMAP, and surprisingly we observed an even distribution across classes (**figure 1M**). This
 final observation suggests that our pathway-disruption classification is
 dependent on particular combinations of gene mutations that hit different
 pathway profiles that can each give rise to advanced stages of disease and
-metastasis, regardless and independent of overall mutational burden.
+metastasis, regardless and independent of overall mutational burden (see Discussion for further analysis).
 
 ### Each class is defined by a specific set of pathway disruptions
 
 In order to visualize pathway disruption enrichment across all cancers
-(pan-cancer), we created oncoprint graphs analagous to the commonly use method,
-replacing genes with pathways (**figure 2**). A complete list of pathway
-disruptions with percent mutated samples and top genes is provided in
-**supplementary table ST1**). These reveal the broad importance of many well
-known pathways that are disrupted in cancer, including <mark>PI3K/Akt
-activation, DNA repair etc fix this with top 5 or so quoted pathway
-labels</mark>. The top third of pathways drop off gradually in overall mutation
-frequency, possibly owing to relative diversity among all tumors.
+(pan-cancer), we created waterfall graphs analagous to the oncoprint
+visualizations on cBioportal [@cbioportal], replacing genes with pathways
+(**figure 2A**). A complete list of pathway disruptions with percent mutated
+samples and top genes is provided in **supplementary table ST1**). As expected,
+these reveal the broad importance of many well known pathways that are disrupted
+in cancer, including "PIP3 activates Akt signaling" (77% of samples),
+"MAP1K/MAP3K signaling" (70% of samples), "Mitotic G2-G2/M phases" (67% of
+samples), "Cellular senescence" (64% of samples), "G2/M Checkpoints" (62% of
+samples), _etc._ . The top third of pathways drop off gradually in overall
+mutation frequency (**figure 1A** and **supplementary table ST1**), possibly
+owing to relative diversity among all tumors.
 
 ```{r child='../code/figure2.Rmd'}
 ```
 
+
 To discover what pathways drive the UMAP clustering, we calculated enrichment
 for each pathway _in-class_ relative to all other classes combined (see methods)
 and ranked pathways for each class from highest to lowest enrichment. We
-visualized the enrichment as a heatmap (**figure 3**). Using this approach, we
-identified 3 pathways highly enriched (enrichment score > 0.2, see methods) in
-class 1, 11 pathways enriched in class 2, 9 pathways in class 3, 12 pathways in
-class 4, 23 pathways in class 5, 31 pathways in class 6, 35 pathways in class 7,
-0 pathways in class 8 (for which most pathways are putatively disrupted), 25
-pathways in class 9, 28 pathways in class 10, 24 pathways in class 11, and 29
-pathways in class 12. Some pairs of classes, in particular classes 6 & 7,
-classes 9 & 10, and 11 & 12 were highly concordant in terms of which pathways
-had enrichment. To explore the specific pathways marking each class, we
-projected disruptions for each of the 377 pathways onto the UMAP
-(**supplementary figure S4**). <mark>Class x</mark> was distinguished by
-metabolic pathways including RNA and protein biosynthesis (**supplementary
-figure S4**). Most class 4 enriched pathways were not unique to this class but
-shared in class 10 & 12, suggesting that this grouping reflects either greater
-heterogeneity or possibly a lower stage of tumor evolution (as distinct from
-clinical ``stage''). Classes 9-12 have in common mutations in extracellular
-signaling, intracellular signaling, and immune-related pathways (see **figures
-3** and **supplementary figure S4**). Cluster group 6-7 had the highest pathway
+visualized the enrichment as a heatmap (**figure 2B**). Using this approach, we
+identified 25 pathways highly enriched (enrichment score > 0.3, see methods) in
+class 2, 9 pathways enriched in class 3, 24 pathways in class 4, 10 pathways in
+class 5, 10 pathways in class 6, 24 pathways in class 7, 24 pathways in class 8
+(for which most pathways are putatively disrupted), 10 pathways in class 9, and
+0 pathways for clusters 1 and 10. Classes 7, 8, and 9 were highly concordant in
+terms of which pathways had enrichment. To explore the specific pathways marking
+each class, we projected disruptions for each of the 377 pathways onto the UMAP
+(**supplementary figure S4**). Classes 3 and 5 were distinguished by metabolic
+pathways including RNA and protein biosynthesis (**supplementary figure S4**).
+Similarly, class 4 was distinguished by mutations affecting regulation of DNA
+and histone methylation ("DNA methylation", "PRC2 methylates histones and DNA",
+and "Nucleosome assembly"). Classes 7-9 have in common mutations in
+extracellular, intracellular, and immune-related signaling pathways (see
+**figure3** and **supplementary figure S4**). Cluster 2 had the highest pathway
 enrichment levels of the three, having mutations in hedgehog signaling,
-$\beta$-catenin degradation, cellular response to hypoxia, regulation of cell
-cycle and apoptosis among others. As cluster groups 9-12 and 6-7 were the most
-distinct of the 12, we chose to investigate these two groups further.
+"$\beta$-catenin degradation", "cellular response to hypoxia", "regulation of
+cell cycle" and "apoptosis" among others.
 
 ### Gene-Pathway redundancy contributes to cluster identity
 
-<mark>This section will have to be rewritten to reflect Simon's new clusters.</mark>
-
-Since pathways like these share many common genes, we investigated whether
-tumors in this class  have multiple mutations across signaling pathways, or
+Since pathways share some common driver genes, we investigated whether
+tumors in each class  have multiple mutations across signaling pathways, or
 whether a small number of driver genes account for enrichment. The split between
-clusters 9 & 10 and 11 & 12 is largely driven by mutations in _PI3K_ and its
+clusters 7 and 8 is largely driven by mutations in _PI3K_ and its
 homologs and _Ras_ genes, respectively (compare _PIK3CA_ and _KRAS_ panels of
-**supplementary figure S4**). Furthermore, clusters 9 and 11 are distinguished
-from 10 and 12 by general lack of P53 mutations (compare **Figure 1f** with the
+**supplementary figure S4**). Furthermore, cluster 1 is distinguished
+from clusters 2-10 by general lack of P53 mutations (compare **Figure 1f** with the
 _TP53_ panel of **Supplementary Figure S4**).
  
-In contrast to clusters 9-12, the group represented by clusters 6 & 7 exhibited
-the highest pathway enrichment scores of the three major categories, though
-there is a significant number of tumors spatially distributed between cluster
-groupings 9-12 and 6-7 on the UMAP projection that have pathway characteristics
-of both. The top ten distinguishing pathways of class 6/7 tumors were "cellular
-response to hypoxia," "regulation of mitotic cell cycle," "assembly of the
-pre-replicative complex," "metabolism of polyamines," "degradation of
-$\beta$-catenin by the destruction complex", "tumor necrosis factor receptor 2
-non-canonical _NF-$\kappa$B_ pathway", " _AUF1_ (hnRNP D0) binds and
-destabilizes RNA", "regulation of apoptosis" and 3 other pathways associated
-with aspects of hedgehog signaling. To determine once again whether the genes
-driving pathway enrichment were commonly shared among these pathways we plotted
-and performed unsupervised clustering on tumors with an individual mutation
-matrix using every gene in each of the ten pathways, grouped by shared pathway
-membership (**figure 4**). Surprisingly, this class of tumors was not
+Cluster 2 exhibited the highest pathway enrichment scores of the ten major
+classes, although there is a significant number of tumors spatially distributed
+between cluster groupings 7-9 and 2 on the UMAP projection that have pathway
+characteristics of both. The top ten distinguishing pathways of class 2 tumors
+were "cellular response to hypoxia," "regulation of mitotic cell cycle,"
+"assembly of the pre-replicative complex," "metabolism of polyamines,"
+"degradation of $\beta$-catenin by the destruction complex", "tumor necrosis
+factor receptor 2 non-canonical _NF-$\kappa$B_ pathway", " _AUF1_ (hnRNP D0)
+binds and destabilizes RNA", "regulation of apoptosis" and 3 other pathways
+associated with aspects of hedgehog signaling. To determine once again whether
+the genes driving pathway enrichment were commonly shared among these pathways
+we plotted and performed unsupervised clustering on tumors with an individual
+mutation matrix using every gene in each of the ten pathways, grouped by shared
+pathway membership (**figure 3A**). Surprisingly, this class of tumors was not
 predominated by 1 or more highly mutated genes across all cancers. Instead,
-genes in the proteosomal pathway whose activity
-contributes to all the aforementioned pathways and the majority of tumors in
-these classes have a single mutation in one of these genes. Nonetheless, a
-significant fraction <mark>(~1/3 <-- need numbers!)</mark> do not have
-proteasomal mutations but instead harbor mutations in genes representing a
-majority of the same pathways, suggesting that most if not all of the pathways
-are individually important and that proteasomal mutations may be sufficient to
-drive the net effect of the other mutations in this cluster. We annotated the
-tumors in this class according to tissue of origin to determine whether
-proteasome mutations have a tissue-of-origin (or cancer-specific) bias, and
-indeed we could observe some clustering. These data could explain how
-tissue-specific gene mutation signatures might result in general cancer
-phenotypes by converging at the pathway level.
+genes in the proteosomal pathway whose activity contributes to all the
+aforementioned pathways and the majority of tumors in these classes have a
+single mutation in one of these genes. We annotated the tumors in this class
+according to tissue of origin to determine whether proteasome mutations have a
+tissue-of-origin (or cancer-specific) bias, and indeed we could observe some
+clustering. These data could explain how tissue-specific gene mutation
+signatures might result in general cancer phenotypes by converging at the
+pathway level.
 
 ```{r child='../code/figure4_function.Rmd'}
 ```
@@ -337,12 +327,13 @@ whether this class of proteins is broadly sensitive to cancer-promoting
 mutations, we tabulated each gene as prognostic or not in the human protein
 expression atlas [@protein_atlas] and found 49 positive and 10 negative
 associations ( _i.e._ higher expression associated with unfavorable outcomes is
-"positive" _etc._) for 31 out of 43 (72%) proteasome genes (**figure 4b**).
-Second we looked at survival in mutations results results results (**figure 4c**). 
-Third, we checked the mutation classes and found the overwhelming
-majority (x out of y) are missense _vs._ various other deletarious classes (see
-**figure 4d**), suggesting that, similar to other oncogenic driver classes such
-as RAS and PI3K, proteasomal subunit mutations may result in specific
+"positive" _etc._) for 31 out of 43 (72%) proteasome genes (**figure 3B**).
+Second we looked at survival in mutations (**figure 3C**). Only a handful of proteasome mutations were significantly associated with favorable or unfavorable outcomes, probably owing to lack of sufficient power.
+
+Third, we checked the mutation classes using MAFtools [@maftools] and found the overwhelming
+majority (x out of y) are missense _vs._ various other deleterious classes (see
+**figure 3D**), suggesting that, similar to other oncogenic driver classes such
+as KRAS and PIK3C, proteasomal subunit mutations may result in specific
 dysregulation of the proteasomal complex activities that target cancer-promoting
 pathways. Taken together, our data suggest that mutations in proteasomal
 subunits are more widespread in cancer than previously appreciated and may
