--- a/text/references.bib
+++ b/text/references.bib
@@ -497,6 +497,16 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   doi = {10.1038/onc.2014.475}
 }
 
+@article{maftools,
+  author = {Mayakonda,A. and Lin, D. and Assenov, Y. and Plass, C. and Koeffler, H.P.},
+  title = {Maftools: efficient and comprehensive analysis of somatic variants in cancer},
+  journal = {Genome Research},
+  year = {2018},
+  volume = {28},
+  pages = {1747--1756},
+  doi = {10.1101/gr.239244.118}
+}
+
 @article{spliceAI,
   author = {Jaganathan, K. and Panagiotopoulou, S.K. and McRae, J.F. and Darbandi, S.F. and Knowles, D. and Li, Y.I. and Kosmicki, J.A. and Arbelaez, J. and Cui, W. and Schwartz, G.B. and Chow, E.D. and Kanterakis, E. and Gao, H. and Kia, A. and Batzoglou, S. and Sanders, S.J. and Farh, K.K.},
   title = {Predicting Splicing from Primary Sequence with Deep Learning},
@@ -519,4 +529,16 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pages = {1161--1170},
   pmid = {30038395},
   doi = {10.1038/s41588-018-0167-z}
+}
+
+@article{cbioportal,
+  author = {Cerami, E. and Gao, J. and Dogrusoz, U. and Gross, B.E. and Sumer, S.O. and Aksoy, B.A. and Jacobsen, A. and Byrne, C.J. and Heuer, M.L. and Larsson, E. and Antipin, Y. and Reva, B. and Goldberg, A.P. and Sander, C. and Schultz, N.},
+  title = {The cBio cancer genomics portal: an open platform for exploring multidimensional cancer genomics data},
+  journal = {Cancer Discovery},
+  year = {2012},
+  volume = {2},
+  number = {5},
+  pages = {401--404},
+  pmid = {22588877},
+  doi = {10.1158/2159-8290.CD-12-0095}
 }
