--- a/text/references.bib
+++ b/text/references.bib
@@ -542,3 +542,27 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pmid = {22588877},
   doi = {10.1158/2159-8290.CD-12-0095}
 }
+
+@article{breast-subtypes2,
+  author = {Prat, A. and Perou, C.M.},
+  title = {Deconstructing the molecular portraits of breast cancer},
+  journal = {Molecular Oncology},
+  year = {2010},
+  volume = {5},
+  number = {1},
+  pages = {5--23},
+  pmid = {21147047},
+  doi = {10.1016/j.molonc.2010.11.003}
+}
+
+@article{breast-subtypes3,
+  author = {Zhang, M. and Lee, A.V. and Rosen, J.M.}
+  title = {The cellular origin and evolution of breast cancer},
+  journal = {CSH Perspectives in Medicine},
+  year = {2017},
+  volume = {7}, 
+  number = {3},
+  pages = {a027128},
+  pmid = {28062556},
+  doi = {10.1101/cshperspect.a027128}
+}
