--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -405,58 +405,8 @@ Response”, and “Pre-NOTCH Expression and Processing” (**Table 2**).
 
 ### Pathway disruption classes vary in short-term prognosis of survival
 
-If our molecular pathway disruption classes represent distinct biological states
-apart from tissue of origin, they may have different prognoses within cancer
-types or across all cancers. Kaplan-Meier plots reveal large differences between
-cancer types as expected, and some modest differences between our classes (not
-shown). These analyses are profoundly limited by confounding factors of age and
-stage at diagnosis, sex, ethnicity, and tissue-specific disease progression, to
-name the obvious ones. To explore these ideas, we tested models of survival
-using public longevity data from the CDC, accounting for age, gender and
-ethnicity. To build on this relatively accurate model of baseline risk (see
-methods), we assume that individual cancer type captures some variation not
-accounted for in the longevity data ( _e.g._ all tissue-specific factors,
-including stage [see methods]), thus allowing us to avoid introducing
-uncertainty by modeling each of those factors explicitly. Therefore, our model
-estimates the effect of cancer type and class-specific cancer effects
-independently. We found that cancer types, as expected, have a range of
-prognoses relative to the general population, as shown in **figure 5a**. The
-least deadly was prostate cancer (PRAD), and the most deadly was glioblastoma
-(GBM) which has a risk multiplier of between 15 and 22 relative to the
-background risk of death in the population. Among the deadliest cancers outside
-of GBM were stomach (STAD), melanoma (SKCM) and pancreatic (PAAD) cancers. Apart
-from these top 4 cancers which ranged from 6-22 in relative risk of age-adjusted
-death, the remaining cancer types ranged from about 1 to 5 in magnitude
-(**figure 5a**).
-
-![](../figures/fig6B.png)
-![](../figures/fig6C.png)
-<p style="FONT-SIZE:10px; COLOR:#000000; LINE-HEIGHT:12px;">**Figure 5: relative survival of pathway clusters. a) Posterior distributions of estimated relative age-dependent survival by cancer type. b) Posterior distributions of estimated class-dependent survival for each cancer type. See methods for model details.</p>
-
-Our estimates of tissue-specific class effects, in contrast, ranged from 0-3,
-reflecting that some classes are either less deadly or more deadly than other
-classes within each cancer types, where the null hypothesis corresponds to an
-effect size=1 (**figure 5b**). For several cancers ( _e.g._ PRAD, kidney
-chromophobe (KICH), diffuse large B-cell lymphoma (DBLC), thyroid cancer (THCA))
-the posterior estimates are largely indestinguishable from the prior, reflecting
-that either there were too few mortalities in the data to make an estimate (as
-expected for PRAD and THCA) or two few samples period. We did not observe
-class-specific trends that held true across cancer types, which could result
-from different cancers having different standards of care for example. In
-support of this interpretation, we also tested a factored model which considered
-both cancer type and each class independent of cancer type (**supplementary
-figure S7??**). Though we were able to successfully fit these models, they
-exhibited much greater uncertainty, suggesting an inferior specification.
-(<mark>Dan are there additional arguments to be made for the inferiority of the
-factored model, here?</mark>)
-
-```{r survival-model, eval=FALSE}
-
+```{r child='survival.Rmd'}
 ```
-
-![**Figure 6B**](../figures/fig6B.png)
-
-![**Figure 6C**](../figures/fig6C.png)
 
 ```{r umap-global-trends, fig.cap="Placeholder for figure 1", results=FALSE, eval=FALSE}
 set.seed(21)
@@ -468,8 +418,9 @@ plot(x=rnorm(1000), y=rnorm(1000))
 
 All code for producing the analyses and figures herein are included in this
 fully reproducible manuscript. In addition, the R markdown files and all other
-models are available from repositories in the following locations on the
-distributed version software hub GitHub.
+models are available from
+[our repositories](https://github.com/dennishazelett/TTmanu) in the following
+locations on the distributed version control site GitHub
 
 ### Selection of pathways
 
